--- a/Hermes/src/refactor/AddOrEditActivityToProject.fxml
+++ b/Hermes/src/refactor/AddOrEditActivityToProject.fxml
@@ -39,19 +39,19 @@
          <children>
             <Pane fx:id="hiddenPane1" layoutX="10.0" layoutY="10.0" prefHeight="457.0" prefWidth="325.0" styleClass="parent" stylesheets="@application.css">
                <children>
-                  <TextField fx:id="activityDescription1" layoutX="145.0" layoutY="236.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <TextField fx:id="activityDescription1" layoutX="145.0" layoutY="287.0" styleClass="txtfield" stylesheets="@application.css" />
                   <Label layoutX="32.0" layoutY="36.0" text="Project Id" textFill="LIGHTSKYBLUE" />
-                  <Label layoutX="32.0" layoutY="138.0" text="New start date" textFill="LIGHTSKYBLUE" />
-                  <Label layoutX="32.0" layoutY="189.0" text="New end date" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="138.0" text="New start time" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="189.0" text="New end time" textFill="LIGHTSKYBLUE" />
                   <TextField fx:id="startDate1" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
                   <TextField fx:id="endDate1" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
-                  <Label layoutY="240.0" text="New activity description" textFill="LIGHTSKYBLUE" />
-                  <Button fx:id="finalizeEditActivity" layoutX="32.0" layoutY="319.0" mnemonicParsing="false" onAction="#addActivity" prefHeight="68.0" prefWidth="185.0" styleClass="signIn-btn" stylesheets="@application.css" text="         Edit activity" textFill="LIGHTSKYBLUE">
+                  <Label layoutY="291.0" text="New activity description" textFill="LIGHTSKYBLUE" />
+                  <Button fx:id="finalizeEditActivity" layoutX="32.0" layoutY="350.0" mnemonicParsing="false" onAction="#addActivity" prefHeight="68.0" prefWidth="185.0" styleClass="signIn-btn" stylesheets="@application.css" text="         Edit activity" textFill="LIGHTSKYBLUE">
                      <font>
                         <Font name="Calibri Bold" size="18.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="355.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Images/parallel-tasks-128.png" />
                      </image>
@@ -59,28 +59,32 @@
                   <Label fx:id="LblProject1" layoutX="199.0" layoutY="36.0" textFill="LIGHTSKYBLUE" />
                   <Label layoutX="32.0" layoutY="87.0" text="Activity ID" textFill="LIGHTSKYBLUE" />
                   <ComboBox fx:id="cBoxOfActivities" layoutX="139.0" layoutY="83.0" onAction="#fillInInformation" prefWidth="150.0" promptText="Activities" stylesheets="@application.css" />
+                  <Label layoutX="32.0" layoutY="240.0" text="New Date" textFill="LIGHTSKYBLUE" />
+                  <TextField fx:id="endDate11" layoutX="139.0" layoutY="236.0" styleClass="txtfield" stylesheets="@application.css" />
                </children>
             </Pane>
             <Pane fx:id="hiddenPane" prefHeight="457.0" prefWidth="325.0" styleClass="parent" stylesheets="@application.css">
                <children>
-                  <TextField fx:id="activityDescription" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <TextField fx:id="activityDescriptionAnswer" layoutX="139.0" layoutY="236.0" styleClass="txtfield" stylesheets="@application.css" />
                   <Label layoutX="32.0" layoutY="36.0" text="Project Id" textFill="LIGHTSKYBLUE" />
-                  <Label layoutX="32.0" layoutY="87.0" text="Start date" textFill="LIGHTSKYBLUE" />
-                  <Label layoutX="32.0" layoutY="138.0" text="End date" textFill="LIGHTSKYBLUE" />
-                  <TextField fx:id="startDate" layoutX="139.0" layoutY="83.0" styleClass="txtfield" stylesheets="@application.css" />
-                  <TextField fx:id="endDate" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
-                  <Label layoutX="20.0" layoutY="189.0" text="Activity description" textFill="LIGHTSKYBLUE" />
-                  <Button fx:id="finalizeAddActivity" layoutX="35.0" layoutY="258.0" mnemonicParsing="false" onAction="#addActivity" prefHeight="76.0" prefWidth="166.0" styleClass="signIn-btn" stylesheets="@application.css" text="            Add activity" textFill="LIGHTSKYBLUE">
+                  <Label layoutX="32.0" layoutY="87.0" text="Start time" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="138.0" text="End time" textFill="LIGHTSKYBLUE" />
+                  <TextField fx:id="startTimeAnswer" layoutX="139.0" layoutY="83.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <TextField fx:id="endTimeAnswer" layoutX="139.0" layoutY="134.0" styleClass="txtfield" stylesheets="@application.css" />
+                  <Label layoutX="20.0" layoutY="240.0" text="Activity description" textFill="LIGHTSKYBLUE" />
+                  <Button fx:id="finalizeAddActivity" layoutX="28.0" layoutY="296.0" mnemonicParsing="false" onAction="#addActivity" prefHeight="76.0" prefWidth="166.0" styleClass="signIn-btn" stylesheets="@application.css" text="            Add activity" textFill="LIGHTSKYBLUE">
                      <font>
                         <Font name="Calibri Bold" size="18.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="40.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="28.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Images/parallel-tasks-128.png" />
                      </image>
                   </ImageView>
                   <Label fx:id="LblProject" layoutX="199.0" layoutY="36.0" textFill="LIGHTSKYBLUE" />
+                  <Label layoutX="32.0" layoutY="189.0" text="Date" textFill="LIGHTSKYBLUE" />
+                  <TextField fx:id="dateAnswer" layoutX="139.0" layoutY="185.0" styleClass="txtfield" stylesheets="@application.css" />
                </children>
             </Pane>
          </children>
