--- a/Hermes/src/refactor/ShowSchedule.fxml
+++ b/Hermes/src/refactor/ShowSchedule.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
@@ -14,11 +16,10 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <GridPane fx:id="grid" layoutX="40.0" layoutY="80.0" prefHeight="600.0" prefWidth="600.0">
+      <GridPane fx:id="grid" gridLinesVisible="true" layoutX="40.0" layoutY="80.0" prefHeight="600.0" prefWidth="600.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,8 +51,58 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
+      <HBox alignment="CENTER" layoutX="40.0" layoutY="45.0" spacing="35.0">
+         <children>
+            <Label text="Monday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="10.0" layoutY="20.0" text="Tuesday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="119.0" layoutY="20.0" text="Wednesday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="177.0" layoutY="20.0" text="Thursday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="-20.0" />
+               </HBox.margin>
+            </Label>
+            <Label layoutX="200.0" layoutY="20.0" text="Friday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="-10.0" />
+               </HBox.margin>
+            </Label>
+            <Label layoutX="476.0" layoutY="10.0" text="Saturday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </Label>
+            <Label layoutX="569.0" layoutY="10.0" text="Sunday" textFill="LIGHTSKYBLUE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="-2.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </Pane>
