--- a/Hermes/src/refactor/MenuGui.fxml
+++ b/Hermes/src/refactor/MenuGui.fxml
@@ -31,7 +31,7 @@
                   <Insets />
                </opaqueInsets>
             </HBox>
-            <Label alignment="CENTER" layoutX="1616.0" layoutY="12.0" onMouseClicked="#logOut" prefHeight="20.0" prefWidth="20.0" styleClass="min-btn">
+            <Label alignment="CENTER" layoutX="1616.0" layoutY="12.0" prefHeight="20.0" prefWidth="20.0" styleClass="min-btn" text="Log Out">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                      <image>
