--- a/Hermes/src/refactor/MenuGui.fxml
+++ b/Hermes/src/refactor/MenuGui.fxml
@@ -19,9 +19,21 @@
    <children>
       <HBox fx:id="top" alignment="CENTER_RIGHT" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="1817.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="1800.0" spacing="80.0">
                <children>
                   <Label text="Hermes" textFill="LIGHTSKYBLUE">
+                     <font>
+                        <Font name="Calibri" size="19.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" onMouseClicked="#logOut" prefHeight="20.0" styleClass="min-btn" text="Log Out" textFill="LIGHTSKYBLUE">
+                     <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Images/logout-128.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <font>
                         <Font name="Calibri" size="19.0" />
                      </font>
@@ -31,15 +43,6 @@
                   <Insets />
                </opaqueInsets>
             </HBox>
-            <Label alignment="CENTER" layoutX="1616.0" layoutY="12.0" prefHeight="20.0" prefWidth="20.0" styleClass="min-btn" text="Log Out">
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Images/minus-3-24.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
             <Label alignment="CENTER" onMouseClicked="#minimize_stage" prefHeight="20.0" prefWidth="20.0" styleClass="min-btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
